--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "clsx": "^2.1.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.3.31",
+    "i18next": "^23.16.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.7",
+    "next-i18next": "^15.3.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
     "react-lottie": "^1.2.4",
     "tailwind-merge": "^2.5.2",
